[package]
name = "waves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
tide = { version = "0.16.0" }
# Async runtime
async-std = { version = "1.12.0", features = ["attributes"]}
# Encoding and decoding
serde = { version = "1.0", features = ["derive"] }
# Logging
femme = "2.2.1"
